--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
-<div class="container d-flex flex-column header-text pt-md-5 pb-lg-5 pb-2 pt-2">
-    <p class="text-dark font-weight-bold">Уютное</p>
-    <p class="text-dark font-weight-bold">постельное бельё</p>
-    <p class="font-weight-bold">со скидкой до 75%</p>
-    <a href="#" class="header-text__btn text-decoration-none bg-dark d-inline-block text-white p-md-3 py-1 pr-0 pl-0 mb-3 text-center col-md-3 mt-md-4 col-5">Выбрать комплект</a>
-</div>
+    <div class="container d-flex flex-column header-text pt-md-5 pb-2 pt-2">
+        <p class="text-dark font-weight-bold">Уютное</p>
+        <p class="text-dark font-weight-bold">постельное бельё</p>
+        <p class="font-weight-bold">со скидкой до 75%</p>
+        <a href="#"
+           class="header-text__btn text-decoration-none bg-dark d-inline-block text-white p-md-3 py-1 mb-3 text-center col-md-3 mt-md-4 col-7 mt-3">Выбрать
+            комплект</a>
+    </div>
 </header>
 <div class="pink-line">
     <div class="container text-white d-flex py-md-3">
@@ -24,9 +27,9 @@
             <div><i class="fas fa-tag align-top mt-1"></i></div>
             <div class="d-inline-block pl-1">
                 <p class="font-weight-bold mb-0">Материал:</p>
-            <p class="mb-0">Поплин 100% хлопок</p></div>
+                <p class="mb-0">Поплин 100% хлопок</p></div>
         </div>
-        <div class="pink-line__item col-md-3 col-6">
+        <div class="pink-line__item col-md-3 col-6 pr-0">
             <i class="fas fa-map-marker-alt align-top mt-1"></i>
             <div class="d-inline-block pl-1">
                 <p class="font-weight-bold mb-0">Производитель:</p>
@@ -36,12 +39,40 @@
     </div>
 </div>
 <section class="container text-center m-auto">
-    <div class="top-discription">
+    <article class="top-discription">
         <p class="font-weight-bold mb-0">В комплекте:</p>
-        <p class="mb-0">простыня: 200*220 - 1шт.</p>
-        <p class="mb-0">пододеяльник 180*215 - 1шт.</p>
-        <p class="mb-0">наволочка: 70*70 или 50*70 - 2шт.</p>
-    </div>
+        <p class="">простыня: 200*220 - 1шт.</p>
+        <p class="0">пододеяльник 180*215 - 1шт.</p>
+        <p class="">наволочка: 70*70 или 50*70 - 2шт.</p>
+    </article>
+    <article class="beds d-flex row">
+        <div class="beds__item col-md-4 col-12">
+            <div class="beds__item__photo"><img class="d-inline-block w-100" src="images/products%20(1).gif"></div>
+            <div class="beds__item__disc">
+                <div class="clearfix">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </article>
 
 
 </section>
