--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
     </div>
 </div>
 <section class="container text-center m-auto">
-    <article class="top-discription">
+    <article class="top-discription pb-5">
         <p class="font-weight-bold mb-0">В комплекте:</p>
         <p class="">простыня: 200*220 - 1шт.</p>
         <p class="0">пододеяльник 180*215 - 1шт.</p>
         <p class="">наволочка: 70*70 или 50*70 - 2шт.</p>
     </article>
     <article class="beds d-flex row">
-        <div class="beds__item col-md-4 col-12">
-            <div class="beds__item__photo"><img class="d-inline-block w-100" src="images/products%20(1).gif"></div>
+        <div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(1).jpg">
+            </div>
             <div class="beds__item__disc">
-                <div class="clearfix">
+                <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
@@ -69,13 +72,208 @@
 </span>
                     </p>
                 </div>
-
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
             </div>
         </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div><div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(2).png">
+            </div>
+            <div class="beds__item__disc">
+                <div class="clearfix item-lost">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
+            </div>
+        </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div><div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(3).png">
+            </div>
+            <div class="beds__item__disc">
+                <div class="clearfix item-lost">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
+            </div>
+        </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div>        <div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(1).jpg">
+            </div>
+            <div class="beds__item__disc">
+                <div class="clearfix item-lost">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
+            </div>
+        </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div><div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(2).png">
+            </div>
+            <div class="beds__item__disc">
+                <div class="clearfix item-lost">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
+            </div>
+        </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div><div class="beds__item col-md-4 col-12 pb-5">
+            <div class="beds__item__photo position-relative">
+                <span class="d-inline-block beds__item__sale">-58%</span>
+                <img class="d-inline-block w-100" src="images/products%20(3).png">
+            </div>
+            <div class="beds__item__disc">
+                <div class="clearfix item-lost">
+                    <p class="float-left">
+                        Осталось всего <span class="text-danger">5 штук</span>
+                    </p>
+                    <p class="stars float-lg-right">
+  <span class="star__container">
+  <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
+  <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
+  <input type="radio" name="rating" value="3" id="star-3" class="star__radio visuhide">
+  <input type="radio" name="rating" value="4" id="star-4" class="star__radio visuhide">
+  <input type="radio" name="rating" value="5" id="star-5" class="star__radio visuhide">
+
+  <label class="star__item" for="star-1"><span class="visuhide">1 star</span></label>
+  <label class="star__item" for="star-2"><span class="visuhide">2 stars</span></label>
+  <label class="star__item" for="star-3"><span class="visuhide">3 stars</span></label>
+  <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
+  <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
+</span>
+                    </p>
+                </div>
+                <div class="beds__item__price clearfix">
+                        <p class="new-price float-left">890</p>
+                    <div class="old-price float-right mt-3">
+                        <p>4230</p>
+                        <p>грн</p>
+                    </div>
+            </div>
+        </div>
+            <div class="item-buy-btn w-100 py-2 mt-4">
+                <a href="#" class="">Заказать</a>
+                </div>
+        </div>
     </article>
-
-
 </section>
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
