my rating stars

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(1).jpg">
+                <img class="d-inline-block w-100" src="images/products1.gif">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -70,7 +70,7 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -83,17 +83,17 @@
             <div class="item-buy-btn w-100 py-2 mt-4">
                 <a href="#" class="">Заказать</a>
                 </div>
-        </div><div class="beds__item col-md-4 col-12 pb-5">
+        </div> <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(2).png">
+                <img class="d-inline-block w-100" src="images/products2.gif">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -107,7 +107,7 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -120,17 +120,17 @@
             <div class="item-buy-btn w-100 py-2 mt-4">
                 <a href="#" class="">Заказать</a>
                 </div>
-        </div><div class="beds__item col-md-4 col-12 pb-5">
+        </div> <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(3).png">
+                <img class="d-inline-block w-100" src="images/products3.jpg">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -144,7 +144,7 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -160,14 +160,14 @@
         </div>        <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(1).jpg">
+                <img class="d-inline-block w-100" src="images/products1.gif">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -181,7 +181,7 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -194,17 +194,17 @@
             <div class="item-buy-btn w-100 py-2 mt-4">
                 <a href="#" class="">Заказать</a>
                 </div>
-        </div><div class="beds__item col-md-4 col-12 pb-5">
+        </div> <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(2).png">
+                <img class="d-inline-block w-100" src="images/products2.gif">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -218,7 +218,7 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -231,17 +231,17 @@
             <div class="item-buy-btn w-100 py-2 mt-4">
                 <a href="#" class="">Заказать</a>
                 </div>
-        </div><div class="beds__item col-md-4 col-12 pb-5">
+        </div> <div class="beds__item col-md-4 col-12 pb-5">
             <div class="beds__item__photo position-relative">
                 <span class="d-inline-block beds__item__sale">-58%</span>
-                <img class="d-inline-block w-100" src="images/products%20(3).png">
+                <img class="d-inline-block w-100" src="images/products3.jpg">
             </div>
             <div class="beds__item__disc">
                 <div class="clearfix item-lost">
                     <p class="float-left">
                         Осталось всего <span class="text-danger">5 штук</span>
                     </p>
-                    <p class="stars float-lg-right">
+                   <!-- <p class="stars float-lg-right">
   <span class="star__container">
   <input type="radio" name="rating" value="1" id="star-1" class="star__radio visuhide">
   <input type="radio" name="rating" value="2" id="star-2" class="star__radio visuhide">
@@ -255,7 +255,14 @@
   <label class="star__item" for="star-4"><span class="visuhide">4 stars</span></label>
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
-                    </p>
+                    </p>-->
+                    <div class="my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -272,6 +279,7 @@
     </article>
 </section>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/my-js.js"></script>
 </body>
 </html>
 
