--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -108,6 +115,13 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -145,6 +159,13 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -182,6 +203,13 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -219,6 +247,13 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                        <div class="rating-stars__item" data-item-value="5">★</div>
+                        <div class="rating-stars__item" data-item-value="4">★</div>
+                        <div class="rating-stars__item" data-item-value="3">★</div>
+                        <div class="rating-stars__item" data-item-value="2">★</div>
+                        <div class="rating-stars__item" data-item-value="1">★</div>
+                    </div>
                 </div>
                 <div class="beds__item__price clearfix">
                         <p class="new-price float-left">890</p>
@@ -256,7 +291,7 @@
   <label class="star__item" for="star-5"><span class="visuhide">5 stars</span></label>
 </span>
                     </p>-->
-                    <div class="my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
+                    <div class="float-right my-rating-stars d-inline-flex flex-row-reverse" data-total-value="0">
                         <div class="rating-stars__item" data-item-value="5">★</div>
                         <div class="rating-stars__item" data-item-value="4">★</div>
                         <div class="rating-stars__item" data-item-value="3">★</div>
@@ -278,6 +313,53 @@
         </div>
     </article>
 </section>
+<div class="review-bg py-3">
+<div class="review container">
+<p class="review__title">Отзывы довольных клиентов</p>
+    <div class="review__content d-flex row align-items-center justify-content-center pt-md-5">
+        <div class="review__content__photo col-md-3 col-5"><img src="images/photo_03.jpg" class="d-inline-block w-100"></div>
+        <div class="review__content__text col-md-8 col-12">
+            <p class="text__name d-inline-block">Юлия Галенко</p>
+            <p class="text__review">
+                За останні два місяці ми допомогли вже 10 громадянам, потерпілим від ч.1.
+                ст.309 ККУ⚖(перевезення чи пересилання конопель без мети збуту) Але ми
+                не зупиняємося і рухаємося далі🏃, продовжуючи надавати безкоштовну
+                юридичну допомогу всім учасникам нашої групи.Підписуйтесь та фолловіть
+                нас - давайте всі разом змінимо нашу країну!❤</p>
+        </div>
+    </div>
+</div>
+</div>
+<div class="how-order container py-4">
+    <p class="how-order__title py-md-5 text-center text-md-left pb-4">Как заказать</p>
+    <div class="d-flex row align-items-start justify-content-between">
+        <div class="how-order__item col-md-2 col-6 text-center">
+            <img class="d-inline-block" src="images/how-order-item_03.jpg">
+            <p>Вы оформляете заказ на нашем сайте</p>
+        </div>
+        <div class="how-order__item col-md-2 col-6 text-center">
+            <img class="d-inline-block" src="images/how-order-item_05.jpg">
+            <p>Менеджер перезвонит вам для уточнения деталей заказа</p>
+        </div>
+        <div class="how-order__item col-md-2 col-6 text-center">
+            <img class="d-inline-block" src="images/how-order-item_08.jpg">
+            <p>В ближайщее время отправляем ваш заказ</p>
+        </div>
+        <div class="how-order__item col-md-2 col-6 text-center">
+            <img class="d-inline-block" src="images/how-order-item_10.jpg">
+            <p>Вы оплачиваете заказ на почте во время получения</p>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="container py-4 text-white">
+        <div class="d-flex row">
+            <span class="font-weight-bold pr-1">Внимание!</span>
+            <span class="d-inline-block">Не забудьте осмотреть товар при получении. По закону Украины вы не сможете вернуть товар после того, как
+            заберете его с Новой Почты.</span>
+        </div>
+    </div>
+</footer>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/my-js.js"></script>
 </body>
